// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`typed material api client integration batch creates materials and snapshots get responses 1`] = `
{
  "id": "<db-id>",
  "modulusOfElasticity": 125000,
  "modulusOfRigidity": 85000,
  "revisionId": "<revision-id>",
  "units": {
    "pressure": "Pascal",
  },
}
`;

exports[`typed material api client integration batch creates materials and snapshots get responses 2`] = `
{
  "id": "<db-id>",
  "modulusOfElasticity": 101324.66370467292,
  "modulusOfRigidity": 101325,
  "revisionId": "<revision-id>",
  "units": {
    "pressure": "Pascal",
  },
}
`;

exports[`typed material api client integration batch creates materials and snapshots get responses 3`] = `
{
  "id": "<db-id>",
  "modulusOfElasticity": 96258.75,
  "modulusOfRigidity": 95000,
  "revisionId": "<revision-id>",
  "units": {
    "pressure": "Pascal",
  },
}
`;
